Sutter Health/src/objects/S3_Metric_Data__c.object
<CustomObject>
    <fields>
        <fullName>Account_Class__c</fullName>
        <description>For Example- Inpatient/Outpatient/Newborn/Ambulatory Surgery</description>
        <label>Account Class</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Account_Create_Date__c</fullName>
        <description>Date and Time stamp when the patient Account was created</description>
        <label>Account Create Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <description>Number generated when a patient is scheduled or entered in the system</description>
        <label>Account Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Admission_Type__c</fullName>
        <description>For Example- Elective/Newborn etc.</description>
        <label>Admission Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Auth_Code__c</fullName>
        <label>Auth Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Code__c</fullName>
        <description>Lawson Company Code</description>
        <label>Company Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completion_by_Pt_Advocate__c</fullName>
        <description>Timestamp when the Patient Advocate has completed working on an account.</description>
        <label>Completion by Pt Advocate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Distrib_Date__c</fullName>
        <description>Lawson AP Close Date &quot;Distribution Date&quot;</description>
        <label>Distrib Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EDI_Error_Message__c</fullName>
        <description>Lawson matching process error message from MA54 MA126 and AP126</description>
        <label>EDI Error Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EDI_Number__c</fullName>
        <label>EDI Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Entity</label>
        <referenceTo>S3_Deployment__c</referenceTo>
        <relationshipLabel>S3 Metric Data</relationshipLabel>
        <relationshipName>Metric_Data_Entitlement</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Guarantor_Verification_Time__c</fullName>
        <description>The time stamp when the Gurantor verified the account</description>
        <label>Guarantor Verification Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Guarantor_verification_User__c</fullName>
        <description>Name of the Guarantor</description>
        <label>Guarantor verification User</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Handling_Code__c</fullName>
        <label>Handling Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hospital_Account_Verification_Time__c</fullName>
        <description>HAR - When the patient account was verified</description>
        <label>Hospital Account Verification Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Hospital_Account_Verification_User__c</fullName>
        <description>Name of the HAR verifier</description>
        <label>Hospital Account Verification User</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Invoice_Amount__c</fullName>
        <description>Lawson Transaction Amount</description>
        <label>Invoice Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <description>Lawson AP Invoice Date</description>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <description>Lawson Invoice Number</description>
        <label>Invoice Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>Lawson Location code for PO/AP</description>
        <label>Location</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Verification_Time__c</fullName>
        <description>The time when the member verification occurred</description>
        <label>Member Verification Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Member_verification_User__c</fullName>
        <description>Name of the member verifier</description>
        <label>Member verification User</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Metric_Link__c</fullName>
        <label>S3 Operations</label>
        <referenceTo>S3_Ops__c</referenceTo>
        <relationshipLabel>S3 Metric Data</relationshipLabel>
        <relationshipName>S3_Metric_Data_to_Ops</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Operator__c</fullName>
        <description>Lawson operator code for initiating the process</description>
        <label>Operator</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Number__c</fullName>
        <description>Purchase Order Number</description>
        <label>PO Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_Advocate__c</fullName>
        <description>This field in Financial Clearance data for the Patient Advocate person/number stamp</description>
        <label>Patient Advocate</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_Verification_Time__c</fullName>
        <description>The timestamp (date/time) when the patient was verified</description>
        <label>Patient Verification Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Patient_Verification_User__c</fullName>
        <description>The Name of the person who verified the patient</description>
        <label>Patient Verification User</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Processing_Level__c</fullName>
        <description>Lawson Processing Level</description>
        <label>Processing Level</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Received_Date__c</fullName>
        <label>Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Remit_to_Code__c</fullName>
        <description>Lawson screen code for next step in processing</description>
        <label>Remit to Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Run_Group__c</fullName>
        <description>Lawson Run Group for matching process</description>
        <label>Run Group</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S3_GA_Sessions__c</fullName>
        <label>S3_GA_Sessions</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>S3_GA_Users__c</fullName>
        <label>S3_GA_Users</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_End__c</fullName>
        <description>When the patient checked out (Discharge)</description>
        <label>Service End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Service_Expected__c</fullName>
        <description>The patient schedule date and time</description>
        <label>Service Expected</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Service_Start__c</fullName>
        <description>When the patient checked in</description>
        <label>Service Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Term_Code__c</fullName>
        <description>Lawson Term Code should be the payment terms of the invoice (non-standard input)</description>
        <label>Term Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Uninsured__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If the patient has insurance or not</description>
        <label>Uninsured</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vendor_ID__c</fullName>
        <description>Lawson vendor ID</description>
        <label>Vendor ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>S3 Metric Data</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>M{00000000}</displayFormat>
        <label>S3 Metric Data ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>S3 Metric Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>